--- a/beta.html
+++ b/beta.html
@@ -118,7 +118,7 @@
 
     /* Input suffix */
     .with-suffix { position: relative; }
-    .with-suffix input { padding-right: 70px; }
+    .with-suffix input[type="number"] { padding-right: 70px; }
     .with-suffix::after { content: attr(data-suffix); position: absolute; right: 12px; top: 50%; transform: translateY(-50%); font-size: 13px; color: var(--muted); pointer-events: none; }
 
     /* Sticky action bar (phones) */
@@ -131,25 +131,21 @@
     #chart { height: clamp(300px, 45vh, 420px); }
     #breakdownChart, #scenarioChart { height: clamp(260px, 42vh, 360px); }
 
-    /* Reduce motion preference */
-    @media (prefers-reduced-motion: reduce){
-      *{ scroll-behavior: auto !important; animation: none !important; transition: none !important; }
-    }
-      /* Assumption grid responsive */
+    /* Assumption grid responsive + dial styling */
     .assumption-grid{ grid-template-columns: repeat(4, 1fr) !important; }
     @media (max-width: 1024px){ .assumption-grid{ grid-template-columns: repeat(2, 1fr) !important; } }
     @media (max-width: 540px){ .assumption-grid{ grid-template-columns: 1fr !important; } }
-
-    /* Dial (range) styling for touch */
-    .dial input[type=range]{
-      width: 100%; height: 34px; margin-top: 6px; background: transparent; -webkit-appearance: none; appearance: none;
-    }
+    .dial input[type=range]{ width: 100%; height: 34px; margin-top: 6px; background: transparent; -webkit-appearance: none; appearance: none; }
     .dial input[type=range]::-webkit-slider-runnable-track{ height: 6px; background: var(--stroke); border-radius: 999px; }
     .dial input[type=range]::-webkit-slider-thumb{ -webkit-appearance:none; appearance:none; width: 26px; height: 26px; border-radius:50%; background: var(--brand); margin-top: -10px; border: 0; box-shadow: 0 1px 3px rgba(0,0,0,.2); }
     .dial input[type=range]::-moz-range-track{ height: 6px; background: var(--stroke); border-radius: 999px; }
     .dial input[type=range]::-moz-range-thumb{ width: 26px; height: 26px; border-radius:50%; background: var(--brand); border:0; box-shadow: 0 1px 3px rgba(0,0,0,.2); }
 
-</style>
+    /* Reduce motion preference */
+    @media (prefers-reduced-motion: reduce){
+      *{ scroll-behavior: auto !important; animation: none !important; transition: none !important; }
+    }
+  </style>
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
 </head>
@@ -358,25 +354,69 @@ function setupTooltip(btnId, boxId) {
 }
 
 document.addEventListener('DOMContentLoaded', () => {
-  // New: bind dial pairs (number <-> range)
-  function bindDial(numberId, rangeId, key, min, max){
-    const num = document.getElementById(numberId);
-    const rng = document.getElementById(rangeId);
-    if(!num || !rng) return;
+  setupTooltip('ssInfoBtn', 'ssInfoBox');
+  setupTooltip('taxableInfoBtn', 'taxableInfoBox');
+});
+</script>
 
-    const clamp = v => Math.min(max, Math.max(min, Number(v)));
+<!-- Mobile nav -->
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+  const btn = document.querySelector('.nav-toggle');
+  const nav = document.getElementById('primary-nav');
+  if (!btn || !nav) return;
+  btn.addEventListener('click', () => {
+    const opened = nav.classList.toggle('open');
+    btn.setAttribute('aria-expanded', opened ? 'true' : 'false');
+  });
+});
+</script>
 
-    // number typing (do not clamp on each keystroke)
-    num.addEventListener('input', () => {
-      const v = Number(num.value);
-      if (isFinite(v)) { rng.value = v; window.spInputs[key] = v; document.dispatchEvent(new CustomEvent('scenario-inputs:change', { detail: { ...window.spInputs }})); }
-    });
-    num.addEventListener('change', () => { const v = clamp(num.value || 0); num.value = v; rng.value = v; window.spInputs[key] = v; document.dispatchEvent(new CustomEvent('scenario-inputs:change', { detail: { ...window.spInputs }})); });
+<!-- Calculator + Highcharts (Main chart) -->
+<script>
+let hcChart = null;
+const TAX_DRAG_DEFAULT = 0.006; // default drag for main chart
+function parseDate(s){ const [y,m,d] = s.split('-').map(Number); return new Date(y,(m||1)-1,d||1); }
+function yearsBetween(a, b){ return (b - a) / (365.25 * 86400000); }
+function yearsFromToday(targetYear){ const now=new Date(); const then=new Date(targetYear, now.getMonth(), now.getDate()); return (then - now) / (365.25*86400000); }
 
-    // range sliding
-    rng.addEventListener('input', () => { num.value = rng.value; window.spInputs[key] = Number(rng.value); document.dispatchEvent(new CustomEvent('scenario-inputs:change', { detail: { ...window.spInputs }})); });
-  }
+/* Scenario input state */
+window.spInputs = { returnPct: 6, inflationPct: 3, withdrawPct: 4, taxDragPct: 0.6, monthlyNeed: 0 };
 
+/* Bind dial pairs (number <-> range) with clamp on blur only */
+function bindDial(numberId, rangeId, key, min, max){
+  const num = document.getElementById(numberId);
+  const rng = document.getElementById(rangeId);
+  if(!num || !rng) return;
+
+  const clamp = v => Math.min(max, Math.max(min, Number(v)));
+
+  // number typing (don't clamp per keystroke)
+  num.addEventListener('input', () => {
+    const v = Number(num.value);
+    if (isFinite(v)) {
+      rng.value = v;
+      window.spInputs[key] = v;
+      document.dispatchEvent(new CustomEvent('scenario-inputs:change', { detail: { ...window.spInputs }}));
+    }
+  });
+  num.addEventListener('change', () => {
+    const v = clamp(num.value || 0);
+    num.value = v;
+    rng.value = v;
+    window.spInputs[key] = v;
+    document.dispatchEvent(new CustomEvent('scenario-inputs:change', { detail: { ...window.spInputs }}));
+  });
+
+  // range sliding
+  rng.addEventListener('input', () => {
+    num.value = rng.value;
+    window.spInputs[key] = Number(rng.value);
+    document.dispatchEvent(new CustomEvent('scenario-inputs:change', { detail: { ...window.spInputs }}));
+  });
+}
+
+document.addEventListener('DOMContentLoaded', () => {
   bindDial('spReturnPct','spReturnPct_range','returnPct',0,100);
   bindDial('spInflationPct','spInflationPct_range','inflationPct',0,100);
   bindDial('spWithdrawPct','spWithdrawPct_range','withdrawPct',1,100);
@@ -515,8 +555,136 @@ function runCalcHandler(){
     ],
     responsive: { rules: [{ condition: { maxWidth: 640 }, chartOptions: { legend: { layout:'horizontal' } } }] }
   });
-  // ensure proper sizing after becoming visible
+  // ensure proper sizing if container was hidden
   setTimeout(()=>{ if(hcChart) hcChart.reflow(); }, 0);
+
+  // Right-panel prompt
+  showScenarioPrompt();
+}
+
+document.getElementById('runCalc').addEventListener('click', runCalcHandler);
+const runMobile = document.getElementById('runCalcMobile');
+runMobile.addEventListener('click', ()=>{
+  // Scroll to inputs if empty for quick guidance on phones
+  const dob = document.getElementById('dob').value; const rd = document.getElementById('retireDate').value;
+  if(!dob || !rd){ document.getElementById('input-card').scrollIntoView({behavior:'smooth', block:'start'}); }
+  runCalcHandler();
+});
+
+document.getElementById('clearAll').addEventListener('click', ()=>{
+  ['dob','retireDate','socsecAge','socsecAmt','pensiondate','pensions','retiresavings','futureretiresavings','taxableNow','spMonthlyNeed'].forEach(id=>{ const el = document.getElementById(id); if(el) el.value = ''; });
+  const sp = document.getElementById('sp-rest'); if (sp) sp.style.display='none';
+  const cs = document.getElementById('chartSection'); if (cs) cs.style.display='none';
+});
+</script>
+
+<!-- Scenario Planner charts (Nominal) -->
+<script>
+function buildScenarioCharts() {
+  const dobStr = document.getElementById('dob').value;
+  const retireStr = document.getElementById('retireDate').value;
+  if (!dobStr || !retireStr) return;
+
+  const dob = parseDate(dobStr);
+  const retireDate = parseDate(retireStr);
+  const retireYear = retireDate.getFullYear();
+
+  const ssStr = document.getElementById('socsecAge').value;
+  const ssAmtAnnual = Number(document.getElementById('socsecAmt').value || 0); // fixed nominal
+  const penStr = document.getElementById('pensiondate').value;
+  const penAmtAnnual = Number(document.getElementById('pensions').value || 0); // fixed nominal
+
+  const ssStart = ssStr ? parseDate(ssStr) : null;
+  const penStart = penStr ? parseDate(penStr) : null;
+
+  const retireNow = Number(document.getElementById('retiresavings').value || 0);
+  const retireAnnual = Number(document.getElementById('futureretiresavings').value || 0);
+  const taxableNow = Number(document.getElementById('taxableNow').value || 0);
+
+  // Scenario dials
+  const rNom   = Number(window.spInputs.returnPct || 6) / 100;
+  const infl   = Number(window.spInputs.inflationPct || 3) / 100; // used to inflate need only
+  const wdRate = Number(window.spInputs.withdrawPct || 4) / 100;
+  const drag   = Math.max(0, Number(window.spInputs.taxDragPct || 0.6)) / 100;
+  const monthlyNeedToday = Number(window.spInputs.monthlyNeed || 0);
+
+  if (monthlyNeedToday <= 0) return;
+
+  // Timeline for projection (retirement year → age 100)
+  const endYear = dob.getFullYear() + 100;
+  const years = []; for (let y = retireYear; y <= endYear; y++) years.push(y);
+
+  // --- Balances at retirement (nominal) ---
+  function growToRetirement() {
+    const today = new Date(); const currentYear = today.getFullYear() + 1; let r = retireNow; let t = taxableNow;
+    for (let y = currentYear; y <= retireYear; y++) { r *= (1 + rNom); t *= (1 + Math.max(0, rNom - drag)); if (y < retireYear) r += retireAnnual; }
+    return { r, t };
+  }
+  const { r: balRet0, t: balTax0 } = growToRetirement();
+
+  // --- Left chart: Monthly Retirement Estimate ---
+  const ssMonthly = (ssStart && ssStart.getFullYear() <= retireYear) ? (ssAmtAnnual / 12) : 0;
+  const penMonthly = (penStart && penStart.getFullYear() <= retireYear) ? (penAmtAnnual / 12) : 0;
+  const retWdMonthly = (wdRate * balRet0) / 12; const taxWdMonthly = (wdRate * balTax0) / 12;
+
+  const yrsToRet = Math.max(0, yearsBetween(new Date(), retireDate));
+  const needMonthlyAtRet = monthlyNeedToday * Math.pow(1 + infl, yrsToRet);
+
+  const stackMonthly = ssMonthly + penMonthly + retWdMonthly + taxWdMonthly;
+  const gap = needMonthlyAtRet - stackMonthly;
+  const gapText = gap > 0 ? `Gap: $${Highcharts.numberFormat(gap, 0)}/mo` : `Surplus: $${Highcharts.numberFormat(-gap, 0)}/mo`;
+
+  Highcharts.chart('breakdownChart', {
+    chart: { type: 'column', backgroundColor: 'transparent', height: 320, reflow: true },
+    title: { text: null },
+    xAxis: { categories: ['Retirement Year'] },
+    yAxis: { min: 0, title: { text: 'Monthly Resources ($)' }, plotLines: [{ value: needMonthlyAtRet, color: '#000', width: 3, zIndex: 5, label: { text: `Need: $${Highcharts.numberFormat(needMonthlyAtRet,0)}/mo`, align: 'right', x: -10, y: -6, style: { color: '#000', fontWeight: '700' } } }] },
+    legend: { align:'center', verticalAlign:'top' },
+    tooltip: { shared: true, formatter: function(){ const total = this.points.reduce((s,p)=>s+p.y,0); const lines = this.points.map(p => `<span style="color:${p.color}">●</span> ${p.series.name}: <b>$${Highcharts.numberFormat(p.y,0)}/mo</b>`).join('<br/>'); return `<b>${this.x}</b><br/>${lines}<br/><b>Total: $${Highcharts.numberFormat(total,0)}/mo</b>`; } },
+    plotOptions: { column: { stacking: 'normal', dataLabels: { enabled: true, formatter(){ return '$' + Highcharts.numberFormat(this.y,0); } } } },
+    credits: { enabled:false },
+    series: [
+      { name:'Social Security', type:'column', data: [ssMonthly] },
+      { name:'Pensions / DB', type:'column', data: [penMonthly] },
+      { name:'Retirement Acct Withdrawal', type:'column', data: [retWdMonthly] },
+      { name:'Non-Retirement Withdrawal', type:'column', data: [taxWdMonthly] }
+    ],
+    subtitle: { text: gapText, style: { fontWeight:'700', color: gap > 0 ? '#b91c1c' : '#166534' } }
+  });
+
+  // --- Right chart: Annual Retirement Savings Projection ---
+  const seriesSS = [], seriesPen = [], seriesRetWd = [], seriesTaxWd = [], needLine = [];
+  let r = balRet0, t = balTax0;
+  for (let i = 0; i < years.length; i++) {
+    const y = years[i];
+    const yrsFromToday = Math.max(0, yearsBetween(new Date(), new Date(y, 0, 1)));
+    const needAnnual = monthlyNeedToday * 12 * Math.pow(1 + infl, yrsFromToday);
+    needLine.push([Date.UTC(y,0,1), needAnnual]);
+    const ssAnnual = (ssStart && ssStart.getFullYear() <= y) ? ssAmtAnnual : 0;
+    const penAnnual = (penStart && penStart.getFullYear() <= y) ? penAmtAnnual : 0;
+    r *= (1 + rNom); t *= (1 + Math.max(0, rNom - drag));
+    const total = r + t; let wdAnnual = 0, wdRet = 0, wdTax = 0;
+    if (total > 0) { wdAnnual = total * wdRate; const shareR = r / total; wdRet = wdAnnual * shareR; wdTax = wdAnnual * (1 - shareR); r -= wdRet; t -= wdTax; }
+    seriesSS.push([Date.UTC(y,0,1), ssAnnual]); seriesPen.push([Date.UTC(y,0,1), penAnnual]); seriesRetWd.push([Date.UTC(y,0,1), wdRet]); seriesTaxWd.push([Date.UTC(y,0,1), wdTax]);
+  }
+  let firstShortfall = null; for (let i = 0; i < years.length; i++) { const income = seriesSS[i][1] + seriesPen[i][1] + seriesRetWd[i][1] + seriesTaxWd[i][1]; const need = needLine[i][1]; if (income + 1e-6 < need) { firstShortfall = years[i]; break; } }
+  const subtitle = firstShortfall ? `First shortfall: ${firstShortfall}` : `No shortfall through age 100`;
+
+  Highcharts.chart('scenarioChart', {
+    chart: { backgroundColor: 'transparent', height: 320, reflow: true },
+    title: { text: null }, subtitle: { text: subtitle }, xAxis: { type: 'datetime' },
+    yAxis: { title: { text: 'Annual Amount ($)' }, labels: { formatter(){ return '$' + Highcharts.numberFormat(this.value, 0); } } },
+    legend: { align:'center', verticalAlign:'top' },
+    tooltip: { shared: true, xDateFormat: '%Y', formatter: function(){ const year = Highcharts.dateFormat('%Y', this.x ?? (this.points && this.points[0]?.x)); const pts = this.points || [this.point]; const totalIncome = pts.filter(p => p.series.type === 'column').reduce((s,p)=>s+p.y,0); const needPt = pts.find(p => p.series.type === 'line'); const needVal = needPt ? needPt.y : null; const lines = pts.map(p => `<span style="color:${p.color}">●</span> ${p.series.name}: <b>$${Highcharts.numberFormat(p.y,0)}</b>`).join('<br/>'); return `<b>${year}</b><br/>${lines}<br/><b>Total income: $${Highcharts.numberFormat(totalIncome,0)}</b>` + (needVal!=null ? `<br/><b>Need: $${Highcharts.numberFormat(needVal,0)}</b>` : ''); } },
+    plotOptions: { column: { stacking: 'normal' } }, credits: { enabled:false },
+    series: [
+      { name:'Social Security', type:'column', data: seriesSS },
+      { name:'Pensions / DB', type:'column', data: seriesPen },
+      { name:'Retirement Acct Withdrawal', type:'column', data: seriesRetWd },
+      { name:'Non-Retirement Withdrawal', type:'column', data: seriesTaxWd },
+      { name:'Annual Need (inflated)', type:'line', data: needLine, color:'#000', lineWidth:3, marker:{ enabled:false } }
+    ]
+  });
 }
 
 document.addEventListener('scenario-inputs:change', () => {
