--- a/beta.html
+++ b/beta.html
@@ -177,7 +177,7 @@
 
         <div class="cb-field">
           <label class="tooltip-click-container" for="socsecAmt">
-            Estimated Annual Social Security ($)
+            Estimated Annual Social Security ($) Use Future Dollars
             <span class="click-icon" id="ssInfoBtn" tabindex="0" role="button" aria-expanded="false" aria-controls="ssInfoBox">?</span>
             <div class="tooltip-click-box" id="ssInfoBox">
               Unsure how much you'll get? Use these official tools:<br><br>
@@ -191,7 +191,7 @@
         </div>
 
         <div class="cb-field"><label for="pensiondate">Pension Start</label><input id="pensiondate" type="date" /></div>
-        <div class="cb-field"><label for="pensions">Annual Pension Amount ($)</label><input id="pensions" type="number" inputmode="decimal" placeholder="e.g., 12000" /></div>
+        <div class="cb-field"><label for="pensions">Annual Pension Amount ($) Future Dollars</label><input id="pensions" type="number" inputmode="decimal" placeholder="e.g., 12000" /></div>
 
         <!-- Non-retirement assets -->
         <div class="cb-field">
