--- a/beta.html
+++ b/beta.html
@@ -177,7 +177,7 @@
 
         <div class="cb-field">
           <label class="tooltip-click-container" for="socsecAmt">
-            Estimated Annual Social Security ($) Use Future Dollars
+            Estimated Annual Social Security ($) Future Dollars
             <span class="click-icon" id="ssInfoBtn" tabindex="0" role="button" aria-expanded="false" aria-controls="ssInfoBox">?</span>
             <div class="tooltip-click-box" id="ssInfoBox">
               Unsure how much you'll get? Use these official tools:<br><br>
