--- a/beta.html
+++ b/beta.html
@@ -262,7 +262,7 @@
           </div>
         </div>
         <div style="margin-top:10px;">
-          <button id="spBuildBtn" class="btn-primary">Build plan</button>
+          <button id="spBuildBtn" class="btn-primary">Create scenario</button>
         </div>
       </div>
 
