Update headings for retirement estimates and projections

--- a/beta.html
+++ b/beta.html
@@ -292,15 +292,15 @@
 
         <div id="scenarioGrid">
           <div>
-            <h3 class="center-title" style="margin:0 0 8px 0; font-size:16px;">Monthly Retirement Estimate</h3>
+            <h3 class="center-title" style="margin:0 0 8px 0; font-size:16px;">Monthly Retirement Estimate (Monthly cash flows)</h3>
             <div id="breakdownChart"></div>
           </div>
           <div>
-            <h3 class="center-title" style="margin:0 0 8px 0; font-size:16px;">Annual Retirement Savings Projection</h3>
+            <h3 class="center-title" style="margin:0 0 8px 0; font-size:16px;">Annual Retirement Savings Projection (Annual cash flows)</h3>
             <div id="scenarioChart"></div>
           </div>
         </div>
-      </div>
+      </div> 
     </section>
 
   </div>
