Update label for Current Savings input field

--- a/beta.html
+++ b/beta.html
@@ -173,7 +173,7 @@
       <div class="cb-row">
         <div class="cb-field"><label for="dob">Date of Birth</label><input id="dob" type="date" autocomplete="bday" /></div>
         <div class="cb-field"><label for="retireDate">Retirement Date</label><input id="retireDate" type="date" /></div>
-        <div class="cb-field"><label for="retiresavings">Current Savings ($)</label><input id="retiresavings" type="number" inputmode="decimal" placeholder="e.g., 120000" /></div>
+        <div class="cb-field"><label for="retiresavings">Current Retirement Savings ($)</label><input id="retiresavings" type="number" inputmode="decimal" placeholder="e.g., 120000" /></div>
 
         <div class="cb-field"><label for="futureretiresavings">Annual Contributions ($)</label><input id="futureretiresavings" type="number" inputmode="decimal" placeholder="e.g., 18000" /></div>
         <div class="cb-field"><label for="socsecAge">Social Security Start</label><input id="socsecAge" type="date" /></div>
