--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Toggle navigation">☰</button>
     <nav id="primary-nav" class="nav-links">
       <a href="#retirement">Retirement Planner</a>
-      <a href="#budget/index.html">Budget Tool</a>
+      <a href="#budget/easy.html">Budget Tool</a>
     </nav>
   </div>
 </header>
