--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 <header class="site-header">
   <div class="cb-wrap header-inner">
-    <a class="brand" href="#">stackxAi</a>
+    <a class="brand" href="#">stakxAi</a>
     <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Toggle navigation">☰</button>
     <nav id="primary-nav" class="nav-links">
       <a href="#retirement">Retirement Planner</a>
