--- a/beta.html
+++ b/beta.html
@@ -135,11 +135,11 @@
 
 <header class="site-header">
   <div class="cb-wrap header-inner">
-    <a class="brand" href="#">stackxAi</a>
+    <a class="brand" href="#">stakxAi</a>
     <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Toggle navigation">☰</button>
     <nav id="primary-nav" class="nav-links">
       <a href="#retirement">Retirement Planner</a>
-      <a href="#budget">Budget Tool</a>
+      <a href="budget/easy.html">Budget Tool</a>
     </nav>
   </div>
 </header>
